[project]
name = "xuplift"
version = "0.0.1"
description = "Add your description here"
authors = [
    {name = "RektPunk", email = "rektpunk@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
repository = "https://github.com/RektPunk/xuplift"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "xuplift"
include = ["python/xuplift/*.pyi", "python/xuplift/py.typed"]
